# aaa

./: .envrc.sample  README.md  pyproject.toml
docs/database-table-design/: er-diagram.pu
src/: 01_base_crud.py  02_where_tips.py  03_select_tips.py  04_relationships_tips.py  05_other_tips.py  db.py  models.py  models_club.py  seeder.py
