[tool.poetry]
name = "sqlalchemy-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
flake8 = "^7.0.0"
black = "^23.12.1"
pymysql = "^1.1.0"
mypy = "^1.8.0"
cryptography = "^41.0.7"
pytest = "^7.4.4"
faker = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "src"
python_files = "*.py"
